Fixes wrong color on gedit-document-panel row button hover
https://gitlab.gnome.org/GNOME/gedit/merge_requests/66

--- a/gedit/resources/css/gedit.adwaita.css
+++ b/gedit/resources/css/gedit.adwaita.css
@@ -60,7 +60,7 @@
 }
 
 .gedit-document-panel row button.flat:hover {
-    color: currentColor;
+    color: @theme_fg_color;
 }
 
 statusbar {
